kube/rails/09-rails-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rails-deployment
spec:
  replicas: 3
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1  
  selector:
    matchLabels: 
      app: rails-kube-app
      tier: app
  template:
    metadata:
      name: rails
      labels:
        app: rails-kube-app
        tier: app
    spec:
      volumes:
      - name: rails-pv
        persistentVolumeClaim:
          claimName: rails-pvc
      containers:
      - name: rails
        image: tzumby/rails-app-alpine:latest
        args: ["rake assets:precompile && rails s -p 3000 -b 0.0.0.0"]
        ports:
          - containerPort: 3000
        volumeMounts:
          - mountPath: "/myapp/public"
            name: rails-pv
