kube/rails/10_ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: rails.carlosmto.com 
    http:
      paths:
      - backend:
          serviceName: rails
          servicePort: 3000
